--- a/WASSA23_test_kfold.ipynb
+++ b/WASSA23_test_kfold.ipynb
@@ -338,7 +338,7 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification, AutoModel\n",
         "from transformers import TrainingArguments, Trainer, TrainerCallback, EarlyStoppingCallback\n",
-        "from transformers import BertPreTrainedModel, BertModel\n",
+        "from transformers import BertPreTrainedModel, BertModel, RobertaPreTrainedModel\n",
         "from transformers.modeling_outputs import SequenceClassifierOutput\n",
         "import torch\n",
         "from torch import nn\n",
@@ -804,12 +804,18 @@
         "    prompt_before_SEP_dev = np.array(split_df[1][best_config.get('prompt_names_before_SEP')])\n",
         "    prompt_before_SEP_train_splits.append(prompt_before_SEP_train)\n",
         "    prompt_before_SEP_dev_splits.append(prompt_before_SEP_dev)\n",
-        "    \n",
+        "  else:\n",
+        "    prompt_before_SEP_train_splits.append(None)\n",
+        "    prompt_before_SEP_dev_splits.append(None)\n",
+        "\n",
         "  if len(best_config.get('prompt_names_after_SEP')) > 0:\n",
         "    prompt_after_SEP_train = np.array(split_df[0][best_config.get('prompt_names_after_SEP')])\n",
         "    prompt_after_SEP_dev = np.array(split_df[1][best_config.get('prompt_names_after_SEP')])\n",
         "    prompt_after_SEP_train_splits.append(prompt_after_SEP_train)\n",
-        "    prompt_after_SEP_dev_splits.append(prompt_after_SEP_dev)"
+        "    prompt_after_SEP_dev_splits.append(prompt_after_SEP_dev)\n",
+        "  else:\n",
+        "    prompt_after_SEP_train_splits.append(None)\n",
+        "    prompt_after_SEP_dev_splits.append(None)"
       ]
     },
     {
