--- a/WASSA23_test_kfold.ipynb
+++ b/WASSA23_test_kfold.ipynb
@@ -1435,7 +1435,7 @@
         "    output_dir=f\"./{best_config.get('model_name')}\",\n",
         "    per_device_train_batch_size = best_config.get('train_batch_size'),\n",
         "    per_device_eval_batch_size = best_config.get('val_batch_size'),\n",
-        "    num_train_epochs = 1, #config.get('epochs'),\n",
+        "    num_train_epochs = best_config.get('epochs'),\n",
         "    evaluation_strategy = \"steps\",\n",
         "    save_strategy = \"steps\",\n",
         "    logging_strategy = \"steps\",\n",
