plot titles removal

--- a/finale.ipynb
+++ b/finale.ipynb
@@ -2548,36 +2548,31 @@
         "  fig_name = \"confusion_matrix\"\n",
         "  plot_confusion_matrix(golds=golds,\n",
         "                        predictions=predictions,\n",
-        "                        title=fig_name,\n",
         "                        path= f\"{path_tosave}/{fig_name}.png\"\n",
         "                        )\n",
         "  print(\"\\n\")\n",
         "  fig_name = \"confusion_matrix_per_emotions\"\n",
         "  plot_confusion_matrix_per_emotions(gold_emotions = golds,\n",
         "                                     predicted_emotions = predictions,\n",
-        "                                     title = fig_name,\n",
         "                                     path= f\"{path_tosave}/{fig_name}.png\"\n",
         "                                     )\n",
         "\n",
         "if TASK == \"EMP\":\n",
-        "  fig_name = f\"{TASK}_empathy_true_vs_predicted\"\n",
+        "  fig_name = f\"empathy_true_vs_predicted\"\n",
         "  plot_true_vs_predicted(golds = golds[:,0],\n",
         "                        predictions = predictions[:,0],\n",
-        "                        title = fig_name,\n",
         "                        path= f\"{path_tosave}/{fig_name}.png\"\n",
         "                        )\n",
         "  print(\"\\n\")\n",
-        "  fig_name = f\"{TASK}_distress_true_vs_predicted\"\n",
+        "  fig_name = f\"distress_true_vs_predicted\"\n",
         "  plot_true_vs_predicted(golds = golds[:,1],\n",
         "                        predictions = predictions[:,1],\n",
-        "                        title = fig_name,\n",
         "                        path= f\"{path_tosave}/{fig_name}.png\"\n",
         "                        )\n",
         "  print(\"\\n\")\n",
-        "  fig_name = f\"{TASK}_abs_diff_true_vs_predicted\"\n",
+        "  fig_name = f\"abs_diff_true_vs_predicted\"\n",
         "  plot_abs_diff_emp(golds = golds,\n",
         "                        predictions = predictions,\n",
-        "                        title = fig_name,\n",
         "                        path= f\"{path_tosave}/{fig_name}.png\"\n",
         "                        )"
       ]
