binary emo config

--- a/finale_bin.ipynb
+++ b/finale_bin.ipynb
@@ -29,8 +29,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -82,8 +82,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package brown to /root/nltk_data...\n",
             "[nltk_data]   Package brown is already up-to-date!\n",
@@ -136,8 +136,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-07-18 17:55:44--  https://raw.githubusercontent.com/HLT-Ghisolfi-Leuzzi-Testa/WASSA-2023/main/utils.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
@@ -198,8 +198,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-07-18 17:55:44--  https://raw.githubusercontent.com/HLT-Ghisolfi-Leuzzi-Testa/WASSA-2023/main/datasets/EMO23_lexicon_per_word_.json\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
@@ -280,14 +280,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<module 'utils' from '/content/utils.py'>"
             ]
           },
+          "execution_count": 114,
           "metadata": {},
-          "execution_count": 114
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -336,8 +336,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "======= CUDA Available =======\n"
           ]
@@ -478,8 +478,8 @@
         "distress_count_global = False #@param {type:\"boolean\"}\n",
         "bio_global = True #@param {type:\"boolean\"}\n",
         "gold_emotions = False #@param {type:\"boolean\"}\n",
-        "gold_empathy = True #@param {type:\"boolean\"}\n",
-        "gold_distress = True #@param {type:\"boolean\"}\n",
+        "gold_empathy = False #@param {type:\"boolean\"}\n",
+        "gold_distress = False #@param {type:\"boolean\"}\n",
         "\n",
         "if TASK == \"EMO\":\n",
         "  gold_emotions = False\n",
@@ -697,8 +697,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "mkdir: cannot create directory ‘EMO_distil-1cls’: File exists\n",
             "\n",
@@ -1436,6 +1436,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 184,
+      "metadata": {
+        "id": "RLvG99jbk3iB"
+      },
+      "outputs": [],
       "source": [
         "class BinaryDataset(Dataset):\n",
         "\n",
@@ -1484,12 +1489,7 @@
         "\n",
         "\n",
         "    return item"
-      ],
-      "metadata": {
-        "id": "RLvG99jbk3iB"
-      },
-      "execution_count": 184,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -1511,14 +1511,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "RobertaTokenizerFast(name_or_path='j-hartmann/emotion-english-distilroberta-base', vocab_size=50265, model_max_length=512, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<s>', 'eos_token': '</s>', 'unk_token': '<unk>', 'sep_token': '</s>', 'pad_token': '<pad>', 'cls_token': '<s>', 'mask_token': AddedToken(\"<mask>\", rstrip=False, lstrip=True, single_word=False, normalized=False)}, clean_up_tokenization_spaces=True)"
             ]
           },
+          "execution_count": 185,
           "metadata": {},
-          "execution_count": 185
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1546,8 +1546,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at j-hartmann/emotion-english-distilroberta-base and are newly initialized because the shapes did not match:\n",
             "- classifier.out_proj.weight: found shape torch.Size([7, 768]) in the checkpoint and torch.Size([2, 768]) in the model instantiated\n",
@@ -1556,7 +1556,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "RobertaForSequenceClassification(\n",
@@ -1605,8 +1604,9 @@
               ")"
             ]
           },
+          "execution_count": 186,
           "metadata": {},
-          "execution_count": 186
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1730,7 +1730,7 @@
         "    learning_rate=config.get('learning_rate'),\n",
         "    weight_decay=config.get('weight_decay'),\n",
         "    load_best_model_at_end=True,\n",
-        "    metric_for_best_model = \"eval_loss\",\n",
+        "    metric_for_best_model = metric_for_val,\n",
         "    seed=config.get('seed'),\n",
         ") # TODO: custom other params"
       ]
@@ -1833,8 +1833,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
             "  warnings.warn(\n",
@@ -1842,11 +1842,7 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "    <div>\n",
@@ -1888,9 +1884,13 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
