binary emo metric

--- a/add_emp_level.ipynb
+++ b/add_emp_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "emp_predictions_path = './empathy_data/predictions_EMP.tsv'\n",
-    "test_df = pd.read_csv('./empathy_data/WASSA23_essay_level_test.tsv', sep='\\t')"
+    "test_df = pd.read_csv('./empathy_data/WASSA23_essay_level_test_preproc.tsv', sep='\\t')"
    ]
   },
   {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,10 +183,17 @@
        "      <th>age</th>\n",
        "      <th>income</th>\n",
        "      <th>speaker_number</th>\n",
-       "      <th>split</th>\n",
-       "      <th>essay_id</th>\n",
+       "      <th>...</th>\n",
+       "      <th>disgust_count</th>\n",
+       "      <th>joy_count</th>\n",
+       "      <th>hope_count</th>\n",
+       "      <th>empathy_count</th>\n",
+       "      <th>distress_count</th>\n",
        "      <th>empathy_level</th>\n",
        "      <th>distress_level</th>\n",
+       "      <th>prompt_bio</th>\n",
+       "      <th>prompt_emp</th>\n",
+       "      <th>prompt_emo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -202,10 +209,17 @@
        "      <td>25</td>\n",
        "      <td>50000</td>\n",
        "      <td>2</td>\n",
-       "      <td>test</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.214286</td>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>2.908646</td>\n",
+       "      <td>2.725509</td>\n",
        "      <td>medium</td>\n",
        "      <td>medium</td>\n",
+       "      <td>An essay written by a 25 years old white femal...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -219,10 +233,17 @@
        "      <td>34</td>\n",
        "      <td>30000</td>\n",
        "      <td>1</td>\n",
-       "      <td>test</td>\n",
-       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>0.044444</td>\n",
+       "      <td>0.035714</td>\n",
+       "      <td>3.130824</td>\n",
+       "      <td>2.885318</td>\n",
        "      <td>high</td>\n",
        "      <td>high</td>\n",
+       "      <td>An essay written by a 34 years old white male,...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -236,10 +257,17 @@
        "      <td>64</td>\n",
        "      <td>40000</td>\n",
        "      <td>2</td>\n",
-       "      <td>test</td>\n",
-       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.058824</td>\n",
+       "      <td>0.055556</td>\n",
+       "      <td>2.678742</td>\n",
+       "      <td>2.543031</td>\n",
        "      <td>high</td>\n",
        "      <td>high</td>\n",
+       "      <td>An essay written by a 64 years old white femal...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -253,10 +281,17 @@
        "      <td>35</td>\n",
        "      <td>5000</td>\n",
        "      <td>1</td>\n",
-       "      <td>test</td>\n",
-       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.048780</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.689422</td>\n",
+       "      <td>2.592165</td>\n",
        "      <td>medium</td>\n",
        "      <td>medium</td>\n",
+       "      <td>An essay written by a 35 years old white femal...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -270,13 +305,27 @@
        "      <td>34</td>\n",
        "      <td>75000</td>\n",
        "      <td>1</td>\n",
-       "      <td>test</td>\n",
-       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.031250</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.619263</td>\n",
+       "      <td>2.593569</td>\n",
        "      <td>high</td>\n",
        "      <td>high</td>\n",
+       "      <td>An essay written by a 34 years old white femal...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -304,10 +353,17 @@
        "      <td>42</td>\n",
        "      <td>50000</td>\n",
        "      <td>1</td>\n",
-       "      <td>test</td>\n",
-       "      <td>95</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.762659</td>\n",
+       "      <td>2.734730</td>\n",
        "      <td>medium</td>\n",
        "      <td>high</td>\n",
+       "      <td>An essay written by a 42 years old white femal...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
@@ -321,10 +377,17 @@
        "      <td>63</td>\n",
        "      <td>55000</td>\n",
        "      <td>2</td>\n",
-       "      <td>test</td>\n",
-       "      <td>96</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.777718</td>\n",
+       "      <td>2.782064</td>\n",
        "      <td>medium</td>\n",
        "      <td>medium</td>\n",
+       "      <td>An essay written by a 63 years old white male,...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
@@ -338,10 +401,17 @@
        "      <td>31</td>\n",
        "      <td>36000</td>\n",
        "      <td>1</td>\n",
-       "      <td>test</td>\n",
-       "      <td>97</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.137931</td>\n",
+       "      <td>0.034483</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.646881</td>\n",
+       "      <td>2.650662</td>\n",
        "      <td>medium</td>\n",
        "      <td>medium</td>\n",
+       "      <td>An essay written by a 31 years old black or af...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
@@ -355,10 +425,17 @@
        "      <td>30</td>\n",
        "      <td>36000</td>\n",
        "      <td>2</td>\n",
-       "      <td>test</td>\n",
-       "      <td>98</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.133333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.758860</td>\n",
+       "      <td>2.687240</td>\n",
        "      <td>high</td>\n",
        "      <td>high</td>\n",
+       "      <td>An essay written by a 30 years old white male,...</td>\n",
+       "      <td>The essay expresses medium empathy and medium ...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
@@ -372,14 +449,21 @@
        "      <td>56</td>\n",
        "      <td>275000</td>\n",
        "      <td>1</td>\n",
-       "      <td>test</td>\n",
-       "      <td>99</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.041667</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.055556</td>\n",
+       "      <td>2.821866</td>\n",
+       "      <td>2.755671</td>\n",
        "      <td>medium</td>\n",
        "      <td>medium</td>\n",
+       "      <td>An essay written by a 56 years old white male,...</td>\n",
+       "      <td>The essay expresses low empathy and low distre...</td>\n",
+       "      <td>The top emotions expressed in the essay are: ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 14 columns</p>\n",
+       "<p>100 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -409,36 +493,75 @@
        "98  I just read about a man who is being deported ...         130       1   \n",
        "99  I feel very sorry for the individual in this a...         149       1   \n",
        "\n",
-       "    education  race  age  income  speaker_number split  essay_id  \\\n",
-       "0           6     1   25   50000               2  test         0   \n",
-       "1           6     1   34   30000               1  test         1   \n",
-       "2           6     1   64   40000               2  test         2   \n",
-       "3           6     1   35    5000               1  test         3   \n",
-       "4           7     1   34   75000               1  test         4   \n",
-       "..        ...   ...  ...     ...             ...   ...       ...   \n",
-       "95          6     1   42   50000               1  test        95   \n",
-       "96          4     1   63   55000               2  test        96   \n",
-       "97          6     3   31   36000               1  test        97   \n",
-       "98          2     1   30   36000               2  test        98   \n",
-       "99          7     1   56  275000               1  test        99   \n",
+       "    education  race  age  income  speaker_number  ... disgust_count  \\\n",
+       "0           6     1   25   50000               2  ...      0.000000   \n",
+       "1           6     1   34   30000               1  ...      0.066667   \n",
+       "2           6     1   64   40000               2  ...      0.000000   \n",
+       "3           6     1   35    5000               1  ...      0.048780   \n",
+       "4           7     1   34   75000               1  ...      0.031250   \n",
+       "..        ...   ...  ...     ...             ...  ...           ...   \n",
+       "95          6     1   42   50000               1  ...      0.066667   \n",
+       "96          4     1   63   55000               2  ...      0.041667   \n",
+       "97          6     3   31   36000               1  ...      0.137931   \n",
+       "98          2     1   30   36000               2  ...      0.133333   \n",
+       "99          7     1   56  275000               1  ...      0.041667   \n",
        "\n",
-       "   empathy_level distress_level  \n",
-       "0         medium         medium  \n",
-       "1           high           high  \n",
-       "2           high           high  \n",
-       "3         medium         medium  \n",
-       "4           high           high  \n",
-       "..           ...            ...  \n",
-       "95        medium           high  \n",
-       "96        medium         medium  \n",
-       "97        medium         medium  \n",
-       "98          high           high  \n",
-       "99        medium         medium  \n",
+       "    joy_count  hope_count  empathy_count  distress_count  empathy_level  \\\n",
+       "0    0.214286    0.066667       2.908646        2.725509         medium   \n",
+       "1    0.044444    0.035714       3.130824        2.885318           high   \n",
+       "2    0.058824    0.055556       2.678742        2.543031           high   \n",
+       "3    0.000000    0.000000       2.689422        2.592165         medium   \n",
+       "4    0.000000    0.000000       2.619263        2.593569           high   \n",
+       "..        ...         ...            ...             ...            ...   \n",
+       "95   0.100000    0.000000       2.762659        2.734730         medium   \n",
+       "96   0.041667    0.000000       2.777718        2.782064         medium   \n",
+       "97   0.034483    0.000000       2.646881        2.650662         medium   \n",
+       "98   0.000000    0.000000       2.758860        2.687240           high   \n",
+       "99   0.083333    0.055556       2.821866        2.755671         medium   \n",
        "\n",
-       "[100 rows x 14 columns]"
+       "    distress_level                                         prompt_bio  \\\n",
+       "0           medium  An essay written by a 25 years old white femal...   \n",
+       "1             high  An essay written by a 34 years old white male,...   \n",
+       "2             high  An essay written by a 64 years old white femal...   \n",
+       "3           medium  An essay written by a 35 years old white femal...   \n",
+       "4             high  An essay written by a 34 years old white femal...   \n",
+       "..             ...                                                ...   \n",
+       "95            high  An essay written by a 42 years old white femal...   \n",
+       "96          medium  An essay written by a 63 years old white male,...   \n",
+       "97          medium  An essay written by a 31 years old black or af...   \n",
+       "98            high  An essay written by a 30 years old white male,...   \n",
+       "99          medium  An essay written by a 56 years old white male,...   \n",
+       "\n",
+       "                                           prompt_emp  \\\n",
+       "0   The essay expresses medium empathy and medium ...   \n",
+       "1   The essay expresses medium empathy and medium ...   \n",
+       "2   The essay expresses medium empathy and medium ...   \n",
+       "3   The essay expresses medium empathy and medium ...   \n",
+       "4   The essay expresses medium empathy and medium ...   \n",
+       "..                                                ...   \n",
+       "95  The essay expresses medium empathy and medium ...   \n",
+       "96  The essay expresses medium empathy and medium ...   \n",
+       "97  The essay expresses medium empathy and medium ...   \n",
+       "98  The essay expresses medium empathy and medium ...   \n",
+       "99  The essay expresses low empathy and low distre...   \n",
+       "\n",
+       "                                           prompt_emo  \n",
+       "0    The top emotions expressed in the essay are: ...  \n",
+       "1    The top emotions expressed in the essay are: ...  \n",
+       "2    The top emotions expressed in the essay are: ...  \n",
+       "3    The top emotions expressed in the essay are: ...  \n",
+       "4    The top emotions expressed in the essay are: ...  \n",
+       "..                                                ...  \n",
+       "95   The top emotions expressed in the essay are: ...  \n",
+       "96   The top emotions expressed in the essay are: ...  \n",
+       "97   The top emotions expressed in the essay are: ...  \n",
+       "98   The top emotions expressed in the essay are: ...  \n",
+       "99   The top emotions expressed in the essay are: ...  \n",
+       "\n",
+       "[100 rows x 31 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
