--- a/GO/go_pre.ipynb
+++ b/GO/go_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,30 @@
     "df2 = df1[df1[unique_emotions].sum(axis=1) != 0][:5000]\n",
     "     \n",
     "\n",
+    "\n",
+    "\n",
     "df2.to_csv('goemotions.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read goemotions.csv\n",
+    "df = pd.read_csv('goemotions.csv')\n",
+    "unique_emotions = ['Disgust', 'Hope', 'Fear', 'Anger', 'Sadness', 'Joy', 'Surprise', 'Neutral']\n",
+    "#convert one hot encoding to emotion as string\n",
+    "df['emotion'] = df[unique_emotions].idxmax(axis=1)\n",
+    "\n",
+    "#make the emotion column lower case\n",
+    "df['emotion'] = df['emotion'].str.lower()\n",
+    "\n",
+    "#remove one hot encoding columns\n",
+    "df = df.drop(unique_emotions, axis=1)\n",
+    "\n",
+    "df.to_csv('goemotions.csv', index=False)"
    ]
   }
  ],
