pred emp test set

--- a/prova.ipynb
+++ b/prova.ipynb
@@ -118,6 +118,157 @@
     "cm_df = pd.DataFrame(confusion_matrix(distress_level_lexico, distress_level_true, labels=labels),index=labels, columns=labels)\n",
     "sns.heatmap(cm_df, annot=True, cmap=\"Blues\", fmt='g')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRIALS = 3\n",
+    "\n",
+    "empathy = []\n",
+    "distress = []\n",
+    "\n",
+    "for trial in range(TRIALS):\n",
+    "    path = f\"./WASSA22_emp_pred/predictions_EMP_trial{trial+1}.tsv\"\n",
+    "    data = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
+    "    empathy.append(data['empathy'])\n",
+    "    distress.append(data['distress'])\n",
+    "\n",
+    "empathy = np.mean(empathy, axis=0)\n",
+    "distress = np.mean(distress, axis=0)\n",
+    "\n",
+    "mean_pred = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
+    "mean_pred.to_csv('./WASSA22_emp_pred/predictions_EMP_mean.tsv', sep=\"\\t\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>empathy</th>\n",
+       "      <th>distress</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.797488</td>\n",
+       "      <td>4.685301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.141955</td>\n",
+       "      <td>5.408740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.135102</td>\n",
+       "      <td>5.143100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.001356</td>\n",
+       "      <td>5.278338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.952650</td>\n",
+       "      <td>5.132850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>5.701636</td>\n",
+       "      <td>6.280551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>5.199758</td>\n",
+       "      <td>5.586633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>3.966649</td>\n",
+       "      <td>5.191073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>4.998530</td>\n",
+       "      <td>5.309174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>4.839761</td>\n",
+       "      <td>4.746244</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     empathy  distress\n",
+       "0   4.797488  4.685301\n",
+       "1   5.141955  5.408740\n",
+       "2   5.135102  5.143100\n",
+       "3   5.001356  5.278338\n",
+       "4   4.952650  5.132850\n",
+       "..       ...       ...\n",
+       "95  5.701636  6.280551\n",
+       "96  5.199758  5.586633\n",
+       "97  3.966649  5.191073\n",
+       "98  4.998530  5.309174\n",
+       "99  4.839761  4.746244\n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_pred"
+   ]
   }
  ],
  "metadata": {
