--- a/WASSA22_emp_pred/EMP_prompt_from_predictions.ipynb
+++ b/WASSA22_emp_pred/EMP_prompt_from_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "distress = np.mean(distress, axis=0)\n",
     "\n",
     "mean_pred_test = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
-    "mean_pred_test.to_csv('./WASSA22_emp_pred/predictions_EMP_mean.tsv', sep=\"\\t\", index=False)\n"
+    "mean_pred_test.to_csv('./WASSA22_emp_pred/predictions_EMP_mean.tsv', sep=\"\\t\", index=False, header=False)\n"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empathy23 = []\n",
+    "\"\"\"empathy23 = []\n",
     "distress23 = []\n",
     "\n",
     "for trial in range(TRIALS):\n",
@@ -76,7 +76,8 @@
     "distress23 = np.mean(distress23, axis=0)\n",
     "\n",
     "mean_pred23 = pd.DataFrame({'empathy': empathy, 'distress': distress})\n",
-    "mean_pred23.to_csv('./WASSA22_emp_pred/predictions23_essay_level.tsv', sep=\"\\t\", index=False)\n"
+    "mean_pred23.to_csv('./WASSA22_emp_pred/predictions23_essay_level.tsv', sep=\"\\t\", index=False)\n",
+    "\"\"\""
    ]
   },
   {
@@ -85,6 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "path23 = f\"./WASSA22_emp_pred/predictions23.tsv\"\n",
+    "mean_pred23 = pd.read_csv(path, sep=\"\\t\", names=['empathy', 'distress'])\n",
     "mean_pred23"
    ]
   },
@@ -101,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_prompt(df):\n",
+    "def add_gold_prompt(df):\n",
     "    for idx, row in df.iterrows():\n",
     "    _, text_prompt_emp, _ = generate_prompt(\n",
     "                                row['essay'],\n",
@@ -124,8 +127,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emp_predictions_path = './empathy_data/predictions_EMP.tsv'\n",
-    "test_df = pd.read_csv('./empathy_data/WASSA23_essay_level_test_preproc.tsv', sep='\\t')"
+    "test_df = pd.read_csv('./datasets/WASSA23_essay_level_test_preproc.tsv', sep='\\t')\n",
+    "test_df = get_emp_levels(test_df, mean_pred_test['empathy'], mean_pred_test['distress'])\n",
+    "test_df = add_gold_prompt(test_df)"
    ]
   },
   {
@@ -134,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = get_emp_levels(test_df, mean_pred_test['empathy'], mean_pred_test['distress'])"
+    "test_df.to_csv('./WASSA22_emp_pred/WASSA23_essay_level_test_gold_prompt.tsv', sep='\\t', index=False)"
    ]
   },
   {
@@ -143,8 +147,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = add_prompt(test_df)\n",
-    "test_df.to_csv(emp_predictions_path, sep='\\t', index=False)"
+    "train_df = pd.read_csv('./datasets/WASSA23_essay_level_preproc.tsv', sep='\\t')\n",
+    "train_df = get_emp_levels(train_df, mean_pred23['empathy'], mean_pred23['distress'])\n",
+    "train_df = add_gold_prompt(train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_csv('./WASSA22_emp_pred/WASSA23_essay_level_gold_prompt.tsv', sep='\\t', index=False)"
    ]
   }
  ],
